--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,183 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Press Start 2P', Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    text-align: center;
+}
+
+.content-pokedex {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.card {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 15px;
+    width: 220px;
+    padding: 20px 0 20px 0;
+    height: auto;
+    overflow: hidden;
+    cursor: pointer;
+    user-select: none;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.card:hover {
+    animation: bounce 0.5s linear;
+}
+
+@keyframes bounce {
+    20% {
+        transform: translateY(-6px);
+    }
+    40% {
+        transform: translateY(-0px);
+    }
+    60% {
+        transform: translateY(-2px);
+    }
+    80% {
+        transform: translateY(-0px);
+    }
+}
+
+.card-number {
+    position: absolute;
+    font-size: 14px;
+    top: 10px;
+    left: 10px;
+}
+
+.card-image {
+    width: 155px;
+}
+
+.card-name {
+    text-transform: capitalize;
+    text-align: center;
+    padding: 0 5px 0 5px;
+}
+
+.card-types {
+    font-family: 'Rubik', Arial, sans-serif;
+    text-transform: uppercase;
+    margin: 10px 0 0 0;
+}
+.card-types span {
+    padding: 5px;
+    border-radius: 100px;
+}
+
+
+/* Modal pokemon */
+.pokemon-sheet {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    overflow-y: auto;
+}
+
+.close-pokemon-sheet {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-family: 'Rubik', Arial, sans-serif;
+    padding: 10px;
+    border: 1px solid #000;
+    border-radius: 100px;
+    cursor: pointer;
+    user-select: none;
+    transition: all 0.5s;
+}
+
+.close-pokemon-sheet:hover {
+    background-color: #000;
+    color: #fff;
+}
+
+.pokemon-basic-information {
+    display: flex;
+}
+
+
+
+
+
+
+/* Couleur des types */
+
+/* .background-color-normal { background: -webkit-linear-gradient(180deg, #a4acaf 50%, #a4acaf 50%);background: -ms-linear-gradient(180deg, #a4acaf 50%, #a4acaf 50%);background: -moz-linear-gradient(180deg, #a4acaf 50%, #a4acaf 50%);background: -o-linear-gradient(180deg, #a4acaf 50%, #a4acaf 50%);background: linear-gradient(180deg, #a4acaf 50%, #a4acaf 50%);background-color: #a4acaf;color: #fff;}
+.background-color-combat { background: -webkit-linear-gradient(180deg, #d56723 50%, #d56723 50%);background: -ms-linear-gradient(180deg, #d56723 50%, #d56723 50%);background: -moz-linear-gradient(180deg, #d56723 50%, #d56723 50%);background: -o-linear-gradient(180deg, #d56723 50%, #d56723 50%);background: linear-gradient(180deg, #d56723 50%, #d56723 50%);background-color: #d56723;color: #fff;}
+.background-color-vol { background: -webkit-linear-gradient(180deg, #3dc7ef 50%, #bdb9b8 50%);background: -ms-linear-gradient(180deg, #3dc7ef 50%, #bdb9b8 50%);background: -moz-linear-gradient(180deg, #3dc7ef 50%, #bdb9b8 50%);background: -o-linear-gradient(180deg, #3dc7ef 50%, #bdb9b8 50%); background: linear-gradient(180deg, #3dc7ef 50%, #bdb9b8 50%);background-color: #3dc7ef;color: #fff;}
+.background-color-poison { background: -webkit-linear-gradient(180deg, #b97fc9 50%, #b97fc9 50%);background: -ms-linear-gradient(180deg, #b97fc9 50%, #b97fc9 50%);background: -moz-linear-gradient(180deg, #b97fc9 50%, #b97fc9 50%);background: -o-linear-gradient(180deg, #b97fc9 50%, #b97fc9 50%);background: linear-gradient(180deg, #b97fc9 50%, #b97fc9 50%);background-color: #b97fc9;color: #fff;}
+.background-color-sol { background: -webkit-linear-gradient(180deg, #f7de3f 50%, #ab9842 50%);background: -ms-linear-gradient(180deg, #f7de3f 50%, #ab9842 50%);background: -moz-linear-gradient(180deg, #f7de3f 50%, #ab9842 50%);background: -o-linear-gradient(180deg, #f7de3f 50%, #ab9842 50%);background: linear-gradient(180deg, #f7de3f 50%, #ab9842 50%);background-color: #f7de3f;color: #fff;}
+.background-color-roche { background: -webkit-linear-gradient(180deg, #a38c21 50%, #a38c21 50%);background: -ms-linear-gradient(180deg, #a38c21 50%, #a38c21 50%);background: -moz-linear-gradient(180deg, #a38c21 50%, #a38c21 50%);background: -o-linear-gradient(180deg, #a38c21 50%, #a38c21 50%);background: linear-gradient(180deg, #a38c21 50%, #a38c21 50%);background-color: #a38c21;color: #fff;}
+.background-color-insecte { background: -webkit-linear-gradient(180deg, #729f3f 50%, #729f3f 50%);background: -ms-linear-gradient(180deg, #729f3f 50%, #729f3f 50%);background: -moz-linear-gradient(180deg, #729f3f 50%, #729f3f 50%);background: -o-linear-gradient(180deg, #729f3f 50%, #729f3f 50%);background: linear-gradient(180deg, #729f3f 50%, #729f3f 50%);background-color: #729f3f;color: #fff;}
+.background-color-spectre { background: -webkit-linear-gradient(180deg, #7b62a3 50%, #7b62a3 50%);background: -ms-linear-gradient(180deg, #7b62a3 50%, #7b62a3 50%);background: -moz-linear-gradient(180deg, #7b62a3 50%, #7b62a3 50%);background: -o-linear-gradient(180deg, #7b62a3 50%, #7b62a3 50%);background: linear-gradient(180deg, #7b62a3 50%, #7b62a3 50%);background-color: #7b62a3;color: #fff;}
+.background-color-acier { background: -webkit-linear-gradient(180deg, #9eb7b8 50%, #9eb7b8 50%);background: -ms-linear-gradient(180deg, #9eb7b8 50%, #9eb7b8 50%);background: -moz-linear-gradient(180deg, #9eb7b8 50%, #9eb7b8 50%);background: -o-linear-gradient(180deg, #9eb7b8 50%, #9eb7b8 50%);background: linear-gradient(180deg, #9eb7b8 50%, #9eb7b8 50%);background-color: #9eb7b8;color: #fff;}
+.background-color-feu { background: -webkit-linear-gradient(180deg, #fd7d24 50%, #fd7d24 50%); background: -ms-linear-gradient(180deg, #fd7d24 50%, #fd7d24 50%);background: -moz-linear-gradient(180deg, #fd7d24 50%, #fd7d24 50%);background: -o-linear-gradient(180deg, #fd7d24 50%, #fd7d24 50%);background: linear-gradient(180deg, #fd7d24 50%, #fd7d24 50%);background-color: #fd7d24;color: #fff; }
+.background-color-eau { background: -webkit-linear-gradient(180deg, #4592c4 50%, #4592c4 50%);background: -ms-linear-gradient(180deg, #4592c4 50%, #4592c4 50%);background: -moz-linear-gradient(180deg, #4592c4 50%, #4592c4 50%);background: -o-linear-gradient(180deg, #4592c4 50%, #4592c4 50%);background: linear-gradient(180deg, #4592c4 50%, #4592c4 50%);background-color: #4592c4;color: #fff;}
+.background-color-plante { background: -webkit-linear-gradient(180deg, #9bcc50 50%, #9bcc50 50%);background: -ms-linear-gradient(180deg, #9bcc50 50%, #9bcc50 50%);background: -moz-linear-gradient(180deg, #9bcc50 50%, #9bcc50 50%);background: -o-linear-gradient(180deg, #9bcc50 50%, #9bcc50 50%);background: linear-gradient(180deg, #9bcc50 50%, #9bcc50 50%);background-color: #9bcc50;color: #fff;}
+.background-color-electrik { background: -webkit-linear-gradient(180deg, #eed535 50%, #eed535 50%);background: -ms-linear-gradient(180deg, #eed535 50%, #eed535 50%);background: -moz-linear-gradient(180deg, #eed535 50%, #eed535 50%);background: -o-linear-gradient(180deg, #eed535 50%, #eed535 50%);background: linear-gradient(180deg, #eed535 50%, #eed535 50%);background-color: #eed535; color: #fff;}
+.background-color-psy { background: -webkit-linear-gradient(180deg, #f366b9 50%, #f366b9 50%);background: -ms-linear-gradient(180deg, #f366b9 50%, #f366b9 50%);background: -moz-linear-gradient(180deg, #f366b9 50%, #f366b9 50%);background: -o-linear-gradient(180deg, #f366b9 50%, #f366b9 50%);background: linear-gradient(180deg, #f366b9 50%, #f366b9 50%);background-color: #f366b9;color: #fff;}
+.background-color-glace { background: -webkit-linear-gradient(180deg, #51c4e7 50%, #51c4e7 50%);background: -ms-linear-gradient(180deg, #51c4e7 50%, #51c4e7 50%);background: -moz-linear-gradient(180deg, #51c4e7 50%, #51c4e7 50%);background: -o-linear-gradient(180deg, #51c4e7 50%, #51c4e7 50%);background: linear-gradient(180deg, #51c4e7 50%, #51c4e7 50%);background-color: #51c4e7;color: #fff;}
+.background-color-dragon { background: -webkit-linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);background: -ms-linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);background: -moz-linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);background: -o-linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);background: linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);background-color: #53a4cf;color: #fff;}
+.background-color-tenebre { background: -webkit-linear-gradient(180deg, #707070 50%, #707070 50%);background: -ms-linear-gradient(180deg, #707070 50%, #707070 50%);background: -moz-linear-gradient(180deg, #707070 50%, #707070 50%);background: -o-linear-gradient(180deg, #707070 50%, #707070 50%);background: linear-gradient(180deg, #707070 50%, #707070 50%);background-color: #707070;color: #fff;}
+.background-color-fee { background: -webkit-linear-gradient(180deg, #fdb9e9 50%, #fdb9e9 50%);background: -ms-linear-gradient(180deg, #fdb9e9 50%, #fdb9e9 50%);background: -moz-linear-gradient(180deg, #fdb9e9 50%, #fdb9e9 50%);background: -o-linear-gradient(180deg, #fdb9e9 50%, #fdb9e9 50%);background: linear-gradient(180deg, #fdb9e9 50%, #fdb9e9 50%);background-color: #fdb9e9;color: #fff;} */
+
+
+/* Color Types */
+
+.background-color-normal { background: -webkit-linear-gradient(180deg, #a4acaf 50%, #a4acaf 50%);background: -ms-linear-gradient(180deg, #a4acaf 50%, #a4acaf 50%);background: -moz-linear-gradient(180deg, #a4acaf 50%, #a4acaf 50%);background: -o-linear-gradient(180deg, #a4acaf 50%, #a4acaf 50%);background: linear-gradient(180deg, #a4acaf 50%, #a4acaf 50%);background-color: #a4acaf;color: #fff;}
+.background-color-fighting { background: -webkit-linear-gradient(180deg, #d56723 50%, #d56723 50%);background: -ms-linear-gradient(180deg, #d56723 50%, #d56723 50%);background: -moz-linear-gradient(180deg, #d56723 50%, #d56723 50%);background: -o-linear-gradient(180deg, #d56723 50%, #d56723 50%);background: linear-gradient(180deg, #d56723 50%, #d56723 50%);background-color: #d56723;color: #fff;}
+.background-color-flying { background: -webkit-linear-gradient(180deg, #3dc7ef 50%, #bdb9b8 50%);background: -ms-linear-gradient(180deg, #3dc7ef 50%, #bdb9b8 50%);background: -moz-linear-gradient(180deg, #3dc7ef 50%, #bdb9b8 50%);background: -o-linear-gradient(180deg, #3dc7ef 50%, #bdb9b8 50%); background: linear-gradient(180deg, #3dc7ef 50%, #bdb9b8 50%);background-color: #3dc7ef;color: #fff;}
+.background-color-poison { background: -webkit-linear-gradient(180deg, #b97fc9 50%, #b97fc9 50%);background: -ms-linear-gradient(180deg, #b97fc9 50%, #b97fc9 50%);background: -moz-linear-gradient(180deg, #b97fc9 50%, #b97fc9 50%);background: -o-linear-gradient(180deg, #b97fc9 50%, #b97fc9 50%);background: linear-gradient(180deg, #b97fc9 50%, #b97fc9 50%);background-color: #b97fc9;color: #fff;}
+.background-color-ground { background: -webkit-linear-gradient(180deg, #f7de3f 50%, #ab9842 50%);background: -ms-linear-gradient(180deg, #f7de3f 50%, #ab9842 50%);background: -moz-linear-gradient(180deg, #f7de3f 50%, #ab9842 50%);background: -o-linear-gradient(180deg, #f7de3f 50%, #ab9842 50%);background: linear-gradient(180deg, #f7de3f 50%, #ab9842 50%);background-color: #f7de3f;color: #fff;}
+.background-color-rock { background: -webkit-linear-gradient(180deg, #a38c21 50%, #a38c21 50%);background: -ms-linear-gradient(180deg, #a38c21 50%, #a38c21 50%);background: -moz-linear-gradient(180deg, #a38c21 50%, #a38c21 50%);background: -o-linear-gradient(180deg, #a38c21 50%, #a38c21 50%);background: linear-gradient(180deg, #a38c21 50%, #a38c21 50%);background-color: #a38c21;color: #fff;}
+.background-color-bug { background: -webkit-linear-gradient(180deg, #729f3f 50%, #729f3f 50%);background: -ms-linear-gradient(180deg, #729f3f 50%, #729f3f 50%);background: -moz-linear-gradient(180deg, #729f3f 50%, #729f3f 50%);background: -o-linear-gradient(180deg, #729f3f 50%, #729f3f 50%);background: linear-gradient(180deg, #729f3f 50%, #729f3f 50%);background-color: #729f3f;color: #fff;}
+.background-color-ghost { background: -webkit-linear-gradient(180deg, #7b62a3 50%, #7b62a3 50%);background: -ms-linear-gradient(180deg, #7b62a3 50%, #7b62a3 50%);background: -moz-linear-gradient(180deg, #7b62a3 50%, #7b62a3 50%);background: -o-linear-gradient(180deg, #7b62a3 50%, #7b62a3 50%);background: linear-gradient(180deg, #7b62a3 50%, #7b62a3 50%);background-color: #7b62a3;color: #fff;}
+.background-color-steel { background: -webkit-linear-gradient(180deg, #9eb7b8 50%, #9eb7b8 50%);background: -ms-linear-gradient(180deg, #9eb7b8 50%, #9eb7b8 50%);background: -moz-linear-gradient(180deg, #9eb7b8 50%, #9eb7b8 50%);background: -o-linear-gradient(180deg, #9eb7b8 50%, #9eb7b8 50%);background: linear-gradient(180deg, #9eb7b8 50%, #9eb7b8 50%);background-color: #9eb7b8;color: #fff;}
+.background-color-fire { background: -webkit-linear-gradient(180deg, #fd7d24 50%, #fd7d24 50%); background: -ms-linear-gradient(180deg, #fd7d24 50%, #fd7d24 50%);background: -moz-linear-gradient(180deg, #fd7d24 50%, #fd7d24 50%);background: -o-linear-gradient(180deg, #fd7d24 50%, #fd7d24 50%);background: linear-gradient(180deg, #fd7d24 50%, #fd7d24 50%);background-color: #fd7d24;color: #fff; }
+.background-color-water { background: -webkit-linear-gradient(180deg, #4592c4 50%, #4592c4 50%);background: -ms-linear-gradient(180deg, #4592c4 50%, #4592c4 50%);background: -moz-linear-gradient(180deg, #4592c4 50%, #4592c4 50%);background: -o-linear-gradient(180deg, #4592c4 50%, #4592c4 50%);background: linear-gradient(180deg, #4592c4 50%, #4592c4 50%);background-color: #4592c4;color: #fff;}
+.background-color-grass { background: -webkit-linear-gradient(180deg, #9bcc50 50%, #9bcc50 50%);background: -ms-linear-gradient(180deg, #9bcc50 50%, #9bcc50 50%);background: -moz-linear-gradient(180deg, #9bcc50 50%, #9bcc50 50%);background: -o-linear-gradient(180deg, #9bcc50 50%, #9bcc50 50%);background: linear-gradient(180deg, #9bcc50 50%, #9bcc50 50%);background-color: #9bcc50;color: #fff;}
+.background-color-electric { background: -webkit-linear-gradient(180deg, #eed535 50%, #eed535 50%);background: -ms-linear-gradient(180deg, #eed535 50%, #eed535 50%);background: -moz-linear-gradient(180deg, #eed535 50%, #eed535 50%);background: -o-linear-gradient(180deg, #eed535 50%, #eed535 50%);background: linear-gradient(180deg, #eed535 50%, #eed535 50%);background-color: #eed535; color: #fff;}
+.background-color-psychic { background: -webkit-linear-gradient(180deg, #f366b9 50%, #f366b9 50%);background: -ms-linear-gradient(180deg, #f366b9 50%, #f366b9 50%);background: -moz-linear-gradient(180deg, #f366b9 50%, #f366b9 50%);background: -o-linear-gradient(180deg, #f366b9 50%, #f366b9 50%);background: linear-gradient(180deg, #f366b9 50%, #f366b9 50%);background-color: #f366b9;color: #fff;}
+.background-color-ice { background: -webkit-linear-gradient(180deg, #51c4e7 50%, #51c4e7 50%);background: -ms-linear-gradient(180deg, #51c4e7 50%, #51c4e7 50%);background: -moz-linear-gradient(180deg, #51c4e7 50%, #51c4e7 50%);background: -o-linear-gradient(180deg, #51c4e7 50%, #51c4e7 50%);background: linear-gradient(180deg, #51c4e7 50%, #51c4e7 50%);background-color: #51c4e7;color: #fff;}
+.background-color-dragon { background: -webkit-linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);background: -ms-linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);background: -moz-linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);background: -o-linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);background: linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);background-color: #53a4cf;color: #fff;}
+.background-color-dark { background: -webkit-linear-gradient(180deg, #707070 50%, #707070 50%);background: -ms-linear-gradient(180deg, #707070 50%, #707070 50%);background: -moz-linear-gradient(180deg, #707070 50%, #707070 50%);background: -o-linear-gradient(180deg, #707070 50%, #707070 50%);background: linear-gradient(180deg, #707070 50%, #707070 50%);background-color: #707070;color: #fff;}
+.background-color-fairy { background: -webkit-linear-gradient(180deg, #fdb9e9 50%, #fdb9e9 50%);background: -ms-linear-gradient(180deg, #fdb9e9 50%, #fdb9e9 50%);background: -moz-linear-gradient(180deg, #fdb9e9 50%, #fdb9e9 50%);background: -o-linear-gradient(180deg, #fdb9e9 50%, #fdb9e9 50%);background: linear-gradient(180deg, #fdb9e9 50%, #fdb9e9 50%);background-color: #fdb9e9;color: #fff;}
+
+
+
+
+
+/* 
+IDEES :
+
+- Ajouter un loader
+- Ajouter un système de filtre (par type, par nom, par génération, etc..)
+- Ajouter la fiche du pokemon
+    - Afficher le plus d'informations possibles : 
+        - Le nom en français
+        - Version shiny
+        - ................
+
+
+
+Si j'ai fini vite : 
+- Dark mode
+
+*/
